[package]
name = "create-node"
version = "0.1.0"
authors = ["mkoakintomiwa <ibnakintomiwa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
functions = { path = "../libraries/functions" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = "2.33.3"