[package]
name = "merchant"
version = "0.1.0"
authors = ["mkoakintomiwa <ibnakintomiwa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
functions_crypto = { path = "../../libraries/functions_crypto" }
json = "*"