[package]
name = "merchants"
version = "0.1.0"
authors = ["mkoakintomiwa <ibnakintomiwa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
definitions = { path = "../../libraries/definitions" }
variables = { path = "../../libraries/variables" }
functions = { path = "../../libraries/functions" }
functions_crypto = { path = "../../libraries/functions_crypto" }
db = { path = "../../libraries/db" }
json = "*"