[package]
name = "db"
version = "0.1.0"
authors = ["mkoakintomiwa <ibnakintomiwa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
definitions = { path = "../definitions" }
variables = { path = "../variables" }
functions = { path = "../functions" }
mysql = "21.0.2"
serde_json = "1.0"
mysql_common = "0.22.2"
indexmap = "1.6.0"