[package]
name = "functions_crypto"
version = "0.1.0"
authors = ["mkoakintomiwa <ibnakintomiwa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
definitions = { path = "../definitions" }
variables = { path = "../variables" }
functions = { path = "../functions" }
db = { path = "../db" }
rust-crypto = "^0.2"
glob = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mysql = "*"
im = "15.0.0"
json = "*"